
PIG-3295: Casting from bytearray failing after Union even when each field is from a single Loader (knoguchi)

PIG-3444: CONCAT with 2+ input parameters fail (lbendig via daijy)

PIG-3117: A debug mode in which pig does not delete temporary files (ihadanny via cheolsoo)

PIG-3484: Make the size of pig.script property configurable (cheolsoo)
 
OPTIMIZATIONS
 
BUG FIXES

PIG-3754: InputSizeReducerEstimator.getTotalInputFileSize reports incorrect size (aniket486)

PIG-3679: e2e StreamingPythonUDFs_10 fails in trunk (cheolsoo)

PIG-3776: Conflicting versions of jline is present in trunk (cheolsoo)

PIG-3674: Fix TestAccumuloPigCluster on Hadoop 2 (elserj via daijy)

PIG-3740: Document direct fetch optimization (lbendig via cheolsoo)

PIG-3746: NPE is thrown if Pig fails before PigStats is intialized (cheolsoo)

PIG-3747: Update skewed join documentation (cheolsoo)

PIG-3755: auto local mode selection does not check lower bound for size (aniket486)

PIG-3753: LOGenerate generates null schema (daijy)

PIG-3447: Compiler warning message dropped for CastLineageSetter and others with no enum kind (knoguchi via cheolsoo)

PIG-3627: Json storage : Doesn't work in cases , where other Store Functions (like PigStorage / AvroStorage)
 do work (ssvinarchukhorton via daijy)

PIG-3606: Pig script throws error when searching for hcatalog jars in latest hive (deepesh via daijy)

PIG-3623: HBaseStorage: setting loadKey and noWAL to false doesn't have any affect (nezihyigitbasi via rohini)

PIG-3744: SequenceFileLoader does not support BytesWritable (rohini)

PIG-3726: Ranking empty records leads to NullPointerException (jarcec via daijy)

PIG-3652: Pigmix parser (PigPerformanceLoader) deletes chars during parsing (keren3000 via daijy)

PIG-3722: Udf deserialization for registered classes fails in local_mode (aniket486)

PIG-3641: Split "otherwise" producing incorrect output when combined with ColumnPruning (knoguchi)
